OCVN-13 Updated translation strings

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -1,7 +1,41 @@
 {
   "": "",
-  "Documentation is in readme.md": "Documentation is in readme.md",
-  "Edit or delete me in ./components/app": "Edit or delete me in ./components/app",
-  "I'm just an example": "I'm just an example",
-  "Language:": "Language:"
+  "Amount": "Amount",
+  "Award": "Award",
+  "Bid Selection Method": "Bid Selection Method",
+  "Bid Type": "Bid Type",
+  "Bid period": "Bid period",
+  "Bid price": "Bid price",
+  "Bid type": "Bid type",
+  "Cancelled funding": "Cancelled funding",
+  "Category": "Category",
+  "Compare": "Compare",
+  "Comparison criteria": "Comparison criteria",
+  "Cost effectiveness": "Cost effectiveness",
+  "Count": "Count",
+  "Date": "Date",
+  "Days": "Days",
+  "Difference": "Difference",
+  "E-procurement": "E-procurement",
+  "End date": "End date",
+  "Estimated price": "Estimated price",
+  "Filter the data": "Filter the data",
+  "None": "None",
+  "Number": "Number",
+  "Overview": "Overview",
+  "Overview chart": "Overview chart",
+  "Planning": "Planning",
+  "Price": "Price",
+  "Procuring Entity": "Procuring Entity",
+  "Procuring entity": "Procuring entity",
+  "Start date": "Start date",
+  "Supplier": "Supplier",
+  "Tender": "Tender",
+  "Toolkit": "Toolkit",
+  "Toolkit description": "Toolkit description",
+  "Total Planned Amount (VND)": "Total Planned Amount (VND)",
+  "Years": "Years",
+  "result": "result",
+  "results": "results",
+  "type search query": "type search query"
 }
