OCVN-13 Removed lettercase inconsistency

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -6,6 +6,7 @@
   "Bid Type": "Bid Type",
   "Bid period": "Bid period",
   "Bid price": "Bid price",
+  "Bid selection method": "Bid selection method",
   "Bid type": "Bid type",
   "Cancelled funding": "Cancelled funding",
   "Category": "Category",
@@ -27,7 +28,6 @@
   "Planning": "Planning",
   "Price": "Price",
   "Procuring Entity": "Procuring Entity",
-  "Procuring entity": "Procuring entity",
   "Start date": "Start date",
   "Supplier": "Supplier",
   "Tender": "Tender",
