--- a/forms/src/main/java/org/devgateway/toolkit/forms/wicket/page/BasePage_vi.properties
+++ b/forms/src/main/java/org/devgateway/toolkit/forms/wicket/page/BasePage_vi.properties
@@ -9,9 +9,15 @@
 # Contributors:
 # Development Gateway - initial API and implementation
 ###############################################################################
-page.title=E-Procurement Toolkit Admin
-dashboard=Dashboard
-importBatches=Import Batches
-importProcess=Import Process
-manageUsers=Manage Users
-api=API
+navbar.logout = Tho\u00e1t
+navbar.groups = Nh\u00f3m ng\u01b0\u1eddi d\u00f9ng
+navbar.admin = Qu\u1ea3n tr\u1ecb vi\u00ean
+navbar.importfiles = nh\u1eadp kh\u1ea9u l\u00f4
+navbar.import = Quy tr\u00ecnh nh\u1eadp kh\u1ea9u
+navbar.halbrowser = HAL duy\u1ec7t
+navbar.ui = B\u1ea3ng \u0111i\u1ec1u khi\u1ec3n
+navbar.springendpoints = Xu\u00e2n Thi\u1ebft b\u1ecb \u0111\u1ea7u cu\u1ed1i
+navbar.users = Users
+navbar.adminSettings = C\u00e0i \u0111\u1eb7t
+home = Trang ch\u1ee7
+navbar.lang = Ng\u00f4n ng\u1eef
