--- a/forms/src/main/java/org/devgateway/toolkit/forms/wicket/page/EditGroupPage_vi.properties
+++ b/forms/src/main/java/org/devgateway/toolkit/forms/wicket/page/EditGroupPage_vi.properties
@@ -9,9 +9,6 @@
 # Contributors:
 # Development Gateway - initial API and implementation
 ###############################################################################
-page.title=E-Procurement Toolkit Admin
-dashboard=Dashboard
-importBatches=Import Batches
-importProcess=Import Process
-manageUsers=Manage Users
-api=API
+page.title=Edit Nh\u00f3m
+label.label=T\u00ean
+
