--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -2,6 +2,7 @@
   "Percent of Tenders Using e-Bid": "% đơn vị dự thầu sử dụng đấu thầu điện tử",
   "Percent of Tenders Using e-Procurement": "% đơn vị dự thầu sử dụng hệ thống mạng đấu thầu quốc gia",
   "Amount": "Tổng vốn",
+  "Amounts": "Tổng vốn",
   "An error occurred during export!": "Có lỗi khi xuất dữ liệu",
   "Apply": "Áp dụng",
   "Average number of bids": "Số gói thầu trung bình",
