--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -91,5 +91,23 @@
   "tables:top10tenders:endDate": "End date",
   "tables:top10tenders:procuringEntity": "Procuring entity",
   "tables:top10tenders:estimatedValue": "Estimated value",
-  "tables:top10tenders:title": "Top 10 largest tenders"
+  "tables:top10tenders:title": "Top 10 largest tenders",
+  "filters:locations:title": "Locations",
+  "filters:bidArea:title": "Bid Area",
+  "filters:contractMethod:title": "Contract method",
+  "filters:tabs:locations:title": "Locations",
+  "filters:tabs:procurementTypes:title": "Procurement types",
+  "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
+  "charts:bidSelectionMethod:title": "Bid selection method",
+  "charts:cancelledFunding:title": "Cancelled funding by reason",
+  "charts:cancelledFunding:xAxisTitle": "Year",
+  "charts:cancelledFunding:yAxisTitle": "Amount (in VND)",
+  "charts:percentEProcurement:xAxisTitle": "Year",
+  "charts:percentEProcurement:yAxisTitle": "Percent",
+  "charts:percentEProcurement:title": "Percent of Tenders Using e-Procurement",
+  "charts:percentWithTenders:title": "Percentage of plans with tender",
+  "charts:percentWithTenders:xAxisTitle": "Year",
+  "charts:percentWithTenders:yAxisTitle": "Percent",
+  "map:plannedLocations:title": "Planning",
+  "maps:invitationToBidLocations:title": "Invitation to Bid Locations"
 }
