--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -1,7 +1,7 @@
 {
   "general:comparison:other": "Khác",
   "general:amountInVND": "Số tiền (VNĐ)",
-  "general:title": "Đấu thầu điện tử",
+  "general:title": "e-Procurement",
   "general:subtitle": "Toolkit",
   "general:description:title": "Mô tả bộ công cụ",
   "general:description:content": "Cổng thông tin Giám sát Đánh giá đấu thầu là nền tảng tương tác nhằm phân tích, giám sát và đánh giá thông tin về đấu thầu tại Việt Nam. Mọi dữ liệu trong bảng điều khiển của Cổng thông tin đều được thu thập từ hệ thống mạng đấu thầu quốc gia (eGP). Việc công khai các dữ liệu này mang tính thí điểm và không đại diện cho dữ liệu chính thức của Chính phủ.",
@@ -84,6 +84,7 @@
   "tables:top10awards:date": "Ngày tháng",
   "tables:top10awards:supplier": "Nhà cung cấp",
   "tables:top10awards:value": "Trị giá",
+  "tables:top10awards:title": "Nhóm 10 gói thầu lớn nhất",
   "tables:top10tenders:number": "Số TBMT",
   "tables:top10tenders:startDate": "Ngày bắt đầu",
   "tables:top10tenders:endDate": "Ngày kết thúc",
