OCE-126 Dashboard translation strings
(cherry picked from commit 194c826)

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -20,6 +20,7 @@
   "filters:title": "Filter the data",
   "filters:apply": "Apply",
   "filters:reset": "Reset",
+  "filters:dashboard:save": "Save",
   "filters:procuringEntity:title": "Procuring entity",
   "filters:supplier:title": "Supplier",
   "filters:tenderPrice:title": "Tender price",
