OCE-126 New dashboard buttons strings
(cherry picked from commit 87f48e4)

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -21,6 +21,10 @@
   "filters:apply": "Apply",
   "filters:reset": "Reset",
   "filters:dashboard:save": "Save",
+  "filters:dashboard:saveForAdmin": "Save for admin",
+  "filters:dashboard:saveUnassigned": "Save unassigned",
+  "filters:dashboard:load": "Load",
+  "filters:dashboard:buttonTitle": "Dashboards",
   "filters:procuringEntity:title": "Procuring entity",
   "filters:supplier:title": "Supplier",
   "filters:tenderPrice:title": "Tender price",
