OCE-126 Vietnamese translations for dashboard ui

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -20,6 +20,11 @@
   "filters:title": "Lọc dữ liệu",
   "filters:apply": "Áp dụng",
   "filters:reset": "Cài đặt lại",
+  "filters:dashboard:save": "Save",
+  "filters:dashboard:saveForAdmin": "Save for admin",
+  "filters:dashboard:saveUnassigned": "Save unassigned",
+  "filters:dashboard:load": "Load",
+  "filters:dashboard:buttonTitle": "Dashboards",
   "filters:procuringEntity:title": "Bên mời thầu",
   "filters:supplier:title": "Nhà cung cấp",
   "filters:tenderPrice:title": "Giá gói thầu",
