OCE-126 Updated translation map
(cherry picked from commit e65d3f2)

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -25,6 +25,11 @@
   "filters:dashboard:saveUnassigned": "Save unassigned",
   "filters:dashboard:load": "Load",
   "filters:dashboard:buttonTitle": "Dashboards",
+  "filters:dashboard:saveError": "Unexpected error. The dashboard was not saved.",
+  "filters:dashboard:defaultHint": "You can set your default dashboard in",
+  "filters:dashboard:profileSettings": "your profile settings",
+  "filters:dashboard:manageDashboards": "Manage dashboards",
+  "filters:dashboard:manageUsers": "Manage users",
   "filters:procuringEntity:title": "Procuring entity",
   "filters:supplier:title": "Supplier",
   "filters:tenderPrice:title": "Tender price",
