OCVN-331 Relabelling: s/bid/invitation to bid

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -55,7 +55,7 @@
   "charts:bidPeriod:xAxisTitle": "Số ngày thực hiện",
   "charts:bidPeriod:yAxisTitle": "Năm",
   "charts:bidPeriod:title": "Thời gian đấu thầu",
-  "charts:bidsByItem:title": "Number of bids by item",
+  "charts:bidsByItem:title": "Number of invitations to bid by item",
   "charts:bidsByItem:xAxisTitle": "Hạng mục",
   "charts:bidsByItem:yAxisTitle": "Số lượng",
   "charts:costEffectiveness:traces:awardPrice": "Giá gói thầu",
@@ -63,7 +63,7 @@
   "charts:costEffectiveness:xAxisTitle": "Năm",
   "charts:costEffectiveness:title": "Hiệu quả chi phí",
   "charts:general:noData": "No data",
-  "charts:nrCancelled:title": "Number of cancelled bids",
+  "charts:nrCancelled:title": "Number of cancelled invitations to bid",
   "charts:nrCancelled:xAxisTitle": "Năm",
   "charts:nrCancelled:yAxisTitle": "Số lượng",
   "charts:nrEBid:xAxisTitle": "Năm",
