--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -55,7 +55,7 @@
   "charts:bidPeriod:xAxisTitle": "Number of days",
   "charts:bidPeriod:yAxisTitle": "Year",
   "charts:bidPeriod:title": "Bid Timeline",
-  "charts:bidsByItem:title": "Number of bids by item",
+  "charts:bidsByItem:title": "Number of invitations to bid by item",
   "charts:bidsByItem:xAxisTitle": "Item",
   "charts:bidsByItem:yAxisTitle": "Count",
   "charts:costEffectiveness:traces:awardPrice": "Award Price",
@@ -64,7 +64,7 @@
   "charts:costEffectiveness:yAxisTitle": "Amount (in VND)",
   "charts:costEffectiveness:title": "Cost effectiveness",
   "charts:general:noData": "No data",
-  "charts:nrCancelled:title": "Number of cancelled bids",
+  "charts:nrCancelled:title": "Number of cancelled invitations to bid",
   "charts:nrCancelled:xAxisTitle": "Year",
   "charts:nrCancelled:yAxisTitle": "Count",
   "charts:nrEBid:xAxisTitle": "Year",
