OCVN-329 Fixed wrong labelling of `bid selection method` filters, that used to be labelled `locations`

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -109,6 +109,7 @@
   "filters:contractMethod:title": "Contract method",
   "filters:tabs:locations:title": "Locations",
   "filters:tabs:procurementTypes:title": "Procurement types",
+  "filters:bidSelectionMethod:title": "Bid Selection Method",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Bid selection method",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
