OCVN-327 Added PE group translation strings

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -110,6 +110,7 @@
   "filters:tabs:locations:title": "Locations",
   "filters:tabs:procurementTypes:title": "Procurement types",
   "filters:bidSelectionMethod:title": "Bid Selection Method",
+  "filters:peGroup:title": "PE group",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Bid selection method",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
