--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -109,6 +109,7 @@
   "filters:tabs:locations:title": "Địa điểm (tỉnh thành)",
   "filters:tabs:procurementTypes:title": "Hình thức đấu thầu",
   "filters:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
+  "filters:peGroup:title": "PE group",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
