OCVN-326 Translation strings for PE department

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -110,6 +110,7 @@
   "filters:tabs:procurementTypes:title": "Hình thức đấu thầu",
   "filters:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
   "filters:peGroup:title": "PE group",
+  "filters:peDepartment:title": "PE department",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
