--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -111,6 +111,7 @@
   "filters:tabs:procurementTypes:title": "Procurement types",
   "filters:bidSelectionMethod:title": "Bid Selection Method",
   "filters:peGroup:title": "PE group",
+  "filters:peDepartment:title": "PE department",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Bid selection method",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
