--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -111,6 +111,7 @@
   "filters:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
   "filters:peGroup:title": "PE group",
   "filters:peDepartment:title": "PE department",
+  "filters:peCity:title": "PE city",
   "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
   "charts:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
   "charts:cancelledFunding:title": "Cancelled funding by reason",
