OCE-148 Vietnamese translation strings for frequent tenderers table

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -61,6 +61,7 @@
   "charts:costEffectiveness:traces:awardPrice": "Giá gói thầu",
   "charts:costEffectiveness:traces:difference": "Chênh lệch với giá gói thầu",
   "charts:costEffectiveness:xAxisTitle": "Năm",
+  "charts:costEffectiveness:yAxisTitle": "Số tiền (VNĐ)",
   "charts:costEffectiveness:title": "Hiệu quả chi phí",
   "charts:general:noData": "No data",
   "charts:nrCancelled:title": "Number of cancelled invitations to bid",
@@ -103,6 +104,9 @@
   "tables:top10tenders:procuringEntity": "Bên mời thầu",
   "tables:top10tenders:estimatedValue": "Trị giá ước tính",
   "tables:top10tenders:title": "Nhóm 10 nhà thầu lớn nhất",
+  "tables:frequentTenderers:supplier": "Supplier",
+  "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
+  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
   "filters:locations:title": "Địa điểm (tỉnh thành)",
   "filters:bidArea:title": "Lĩnh vực đấu thầu",
   "filters:contractMethod:title": "Loại hợp đồng",
