--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -106,7 +106,7 @@
   "tables:top10tenders:title": "Top 10 largest tenders",
   "tables:frequentTenderers:supplier": "Supplier",
   "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
-  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations"
+  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
   "filters:locations:title": "Locations",
   "filters:bidArea:title": "Bid Area",
   "filters:contractMethod:title": "Contract method",
