OCVN-280 Latest Vietnamese translations

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -64,13 +64,13 @@
   "charts:costEffectiveness:xAxisTitle": "Năm",
   "charts:costEffectiveness:yAxisTitle": "Số tiền (VNĐ)",
   "charts:costEffectiveness:title": "Hiệu quả chi phí",
-  "charts:general:noData": "No data",
+  "charts:general:noData": "Không có dữ liệu",
   "charts:nrCancelled:title": "Number of cancelled invitations to bid",
   "charts:nrCancelled:xAxisTitle": "Năm",
   "charts:nrCancelled:yAxisTitle": "Số lượng",
   "charts:nrEBid:xAxisTitle": "Năm",
   "charts:nrEBid:yAxisTitle": "Số lượng",
-  "charts:nrEBid:title": "Number of eBid Awards",
+  "charts:nrEBid:title": "Số gói thầu điện tử được trao thầu",
   "charts:overview:traces:award": "Kết quả đấu thầu",
   "charts:overview:traces:bidplan": "Kế hoạch gói thầu",
   "charts:overview:traces:tender": "Đấu thầu",
@@ -117,15 +117,15 @@
   "filters:peGroup:title": "PE group",
   "filters:peDepartment:title": "PE department",
   "filters:peCity:title": "PE city",
-  "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
+  "charts:bidPeriod:traces:avgTime": "Thời gian trung bình từ lập kế hoạch đấu thầu đến thực hiện thầu",
   "charts:bidSelectionMethod:title": "Hình thức lựa chọn nhà thầu",
-  "charts:cancelledFunding:title": "Cancelled funding by reason",
+  "charts:cancelledFunding:title": "Phân loại hủy thầu theo nguyên nhân hủy",
   "charts:cancelledFunding:xAxisTitle": "Năm",
   "charts:cancelledFunding:yAxisTitle": "Số tiền (VNĐ)",
   "charts:percentEProcurement:xAxisTitle": "Năm",
   "charts:percentEProcurement:yAxisTitle": "Phần trăm",
   "charts:percentEProcurement:title": "% đơn vị dự thầu sử dụng hệ thống mạng đấu thầu quốc gia",
-  "charts:percentWithTenders:title": "Percentage of plans with tender",
+  "charts:percentWithTenders:title": "% gói thầu có ID nêu trong cả KH gói thầu và TBMT",
   "charts:percentWithTenders:xAxisTitle": "Năm",
   "charts:percentWithTenders:yAxisTitle": "Phần trăm",
   "map:plannedLocations:title": "Lập kế hoạch",
