OCE-148 Translation keys for new frequent tenderers visual

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -108,6 +108,7 @@
   "tables:frequentTenderers:supplier": "Supplier",
   "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
   "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
+  "tables:showAll": "Show all",
   "filters:locations:title": "Locations",
   "filters:bidArea:title": "Bid Area",
   "filters:contractMethod:title": "Contract method",
