--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -108,6 +108,7 @@
   "tables:frequentTenderers:supplier": "Supplier",
   "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
   "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
+  "tables:showAll": "Show all",
   "filters:locations:title": "Địa điểm (tỉnh thành)",
   "filters:bidArea:title": "Lĩnh vực đấu thầu",
   "filters:contractMethod:title": "Loại hợp đồng",
