--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -7,6 +7,20 @@
   "general:description:content": "The Procurement M&E Prototype is an interactive platform for analyzing, monitoring, and evaluating information on procurement in Vietnam. All data in the dashboard are collected from the Vietnam Government eProcurement system (eGP). These data are published on a pilot basis and do not represent official government statistics.",
   "general:login": "Log in",
   "general:logout": "Log out",
+  "general:months:1": "Jan",
+  "general:months:2": "Feb",
+  "general:months:3": "Mar",
+  "general:months:4": "Apr",
+  "general:months:5": "May",
+  "general:months:6": "Jun",
+  "general:months:7": "Jul",
+  "general:months:8": "Aug",
+  "general:months:9": "Sep",
+  "general:months:10": "Oct",
+  "general:months:11": "Nov",
+  "general:months:12": "Dec",
+  "general:range:min": "Min",
+  "general:range:max": "Max",
   "header:comparison:title": "Compare",
   "header:comparison:criteria": "Comparison criteria",
   "header:comparison:criteria:none": "None",
@@ -106,28 +120,5 @@
   "tables:top10tenders:title": "Top 10 largest tenders",
   "tables:frequentTenderers:supplier": "Supplier",
   "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
-  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
-  "tables:showAll": "Show all",
-  "filters:locations:title": "Locations",
-  "filters:bidArea:title": "Bid Area",
-  "filters:contractMethod:title": "Contract method",
-  "filters:tabs:locations:title": "Locations",
-  "filters:tabs:procurementTypes:title": "Procurement types",
-  "filters:bidSelectionMethod:title": "Bid Selection Method",
-  "filters:peGroup:title": "PE group",
-  "filters:peDepartment:title": "PE department",
-  "filters:peCity:title": "PE city",
-  "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
-  "charts:bidSelectionMethod:title": "Bid selection method",
-  "charts:cancelledFunding:title": "Cancelled funding by reason",
-  "charts:cancelledFunding:xAxisTitle": "Year",
-  "charts:cancelledFunding:yAxisTitle": "Amount (in VND)",
-  "charts:percentEProcurement:xAxisTitle": "Year",
-  "charts:percentEProcurement:yAxisTitle": "Percent",
-  "charts:percentEProcurement:title": "Percent of Tenders Using e-Procurement",
-  "charts:percentWithTenders:title": "Percentage of plans with tender",
-  "charts:percentWithTenders:xAxisTitle": "Year",
-  "charts:percentWithTenders:yAxisTitle": "Percent",
-  "map:plannedLocations:title": "Planning",
-  "maps:invitationToBidLocations:title": "Invitation to Bid Locations"
+  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations"
 }
