OCE-141  Restored  English translations accidentally lost during merge

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -120,5 +120,28 @@
   "tables:top10tenders:title": "Top 10 largest tenders",
   "tables:frequentTenderers:supplier": "Supplier",
   "tables:frequentTenderers:nrITB": "Number of ITBs in Common",
-  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations"
+  "tables:frequentTenderers:title": "Frequent Supplier Bidding Combinations",
+  "tables:showAll": "Show all",
+  "filters:locations:title": "Locations",
+  "filters:bidArea:title": "Bid Area",
+  "filters:contractMethod:title": "Contract method",
+  "filters:tabs:locations:title": "Locations",
+  "filters:tabs:procurementTypes:title": "Procurement types",
+  "filters:bidSelectionMethod:title": "Bid Selection Method",
+  "filters:peGroup:title": "PE group",
+  "filters:peDepartment:title": "PE department",
+  "filters:peCity:title": "PE city",
+  "charts:bidPeriod:traces:avgTime": "Average time from plan to tender phase",
+  "charts:bidSelectionMethod:title": "Bid selection method",
+  "charts:cancelledFunding:title": "Cancelled funding by reason",
+  "charts:cancelledFunding:xAxisTitle": "Year",
+  "charts:cancelledFunding:yAxisTitle": "Amount (in VND)",
+  "charts:percentEProcurement:xAxisTitle": "Year",
+  "charts:percentEProcurement:yAxisTitle": "Percent",
+  "charts:percentEProcurement:title": "Percent of Tenders Using e-Procurement",
+  "charts:percentWithTenders:title": "Percentage of plans with tender",
+  "charts:percentWithTenders:xAxisTitle": "Year",
+  "charts:percentWithTenders:yAxisTitle": "Percent",
+  "map:plannedLocations:title": "Planning",
+  "maps:invitationToBidLocations:title": "Invitation to Bid Locations"
 }
