OCE-133 Added missing Vietnamese translation key(`Loading`)

--- a/ui/languages/vn_VN.json
+++ b/ui/languages/vn_VN.json
@@ -22,6 +22,7 @@
 	"general:months:12": "T12",
 	"general:range:min": "Min",
 	"general:range:max": "Max",
+	"general:loading": "Loading...",
 	"header:comparison:title": "So sánh",
 	"header:comparison:criteria": "Tiêu chí so sánh",
 	"header:comparison:criteria:none": "Không có",
