OCE-128 Generic strings for monthly charts
(cherry picked from commit adf4022)

--- a/ui/languages/en_US.json
+++ b/ui/languages/en_US.json
@@ -8,6 +8,8 @@
   "general:login": "Log in",
   "general:logout": "Log out",
   "general:viewOnGithub": "View code on Github",
+  "general:year": "Year",
+  "general:month": "Month",
   "general:months:1": "Jan",
   "general:months:2": "Feb",
   "general:months:3": "Mar",
