OCVN-370 Added total tender amounts by item chart
(cherry picked from commit a9b7f6c)

--- a/web/public/languages/en_US.json
+++ b/web/public/languages/en_US.json
@@ -76,6 +76,9 @@
   "charts:bidsByItem:title": "Number of invitations to bid by item",
   "charts:bidsByItem:xAxisTitle": "Item",
   "charts:bidsByItem:yAxisTitle": "Count",
+  "charts:amountsByItem:title": "Total Amount by Items",
+  "charts:amountsByItem:xAxisTitle": "Item",
+  "charts:amountsByItem:yAxisTitle": "Amount (in VND)",
   "charts:costEffectiveness:traces:awardPrice": "Award Price",
   "charts:costEffectiveness:traces:difference": "Difference",
   "charts:costEffectiveness:xAxisTitle": "Year",
