OCVN-370 Added VN translation strings for total amounts by item chart

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -76,6 +76,9 @@
 	"charts:bidsByItem:title": "số TBMT theo hạng mục",
 	"charts:bidsByItem:xAxisTitle": "Hạng mục",
 	"charts:bidsByItem:yAxisTitle": "Số lượng",
+    "charts:amountsByItem:title": "",
+    "charts:amountsByItem:xAxisTitle": "Hạng mục",
+    "charts:amountsByItem:yAxisTitle": "Số tiền (VNĐ)",
 	"charts:costEffectiveness:traces:awardPrice": "Giá gói thầu",
 	"charts:costEffectiveness:traces:difference": "Chênh lệch với giá gói thầu",
 	"charts:costEffectiveness:xAxisTitle": "Năm",
