--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -76,7 +76,7 @@
 	"charts:bidsByItem:title": "số TBMT theo hạng mục",
 	"charts:bidsByItem:xAxisTitle": "Hạng mục",
 	"charts:bidsByItem:yAxisTitle": "Số lượng",
-    "charts:amountsByItem:title": "",
+    "charts:amountsByItem:title": "Tổng trị giá theo lĩnh vực đấu thầu",
     "charts:amountsByItem:xAxisTitle": "Hạng mục",
     "charts:amountsByItem:yAxisTitle": "Số tiền (VNĐ)",
 	"charts:costEffectiveness:traces:awardPrice": "Giá gói thầu",
