--- a/web/public/languages/en_US.json
+++ b/web/public/languages/en_US.json
@@ -1,6 +1,6 @@
 {
   "general:comparison:other": "Other",
-  "general:amountInVND": "Amount (in VND)",
+  "general:amountInVND": "Amount",
   "general:title": "e-Procurement",
   "general:subtitle": "Toolkit",
   "general:description:title": "Toolkit description",
@@ -78,12 +78,12 @@
   "charts:bidsByItem:yAxisTitle": "Count",
   "charts:amountsByItem:title": "Total Amount by Items",
   "charts:amountsByItem:xAxisTitle": "Item",
-  "charts:amountsByItem:yAxisTitle": "Amount (in VND)",
+  "charts:amountsByItem:yAxisTitle": "Amount",
   "charts:costEffectiveness:traces:awardPrice": "Award Price",
   "charts:costEffectiveness:traces:tenderPrice": "Bid Price",
   "charts:costEffectiveness:traces:difference": "Difference",
   "charts:costEffectiveness:xAxisTitle": "Year",
-  "charts:costEffectiveness:yAxisTitle": "Amount (in VND)",
+  "charts:costEffectiveness:yAxisTitle": "Amount",
   "charts:costEffectiveness:title": "Cost effectiveness",
   "charts:general:noData": "No data",
   "charts:nrCancelled:title": "Number of cancelled invitations to bid",
@@ -103,10 +103,10 @@
   "charts:percentEBid:title": "Percent of Invitations to Bid using e-Bid",
   "charts:procurementMethod:unspecified": "Unspecified",
   "charts:procurementMethod:xAxisName": "Method",
-  "charts:procurementMethod:yAxisName": "Amount (in VND)",
+  "charts:procurementMethod:yAxisName": "Amount",
   "charts:procurementMethod:title": "Procurement method",
   "charts:cancelledAmounts:xAxisName": "Year",
-  "charts:cancelledAmounts:yAxisName": "Amount (in VND)",
+  "charts:cancelledAmounts:yAxisName": "Amount",
   "charts:cancelledPercents:title": "Cancelled funding (%)",
   "charts:cancelledAmounts:title": "Cancelled funding",
   "charts:cancelledPercents:xAxisName": "Year",
@@ -160,7 +160,7 @@
   "tables:top10suppliers:supplierName": "Supplier name",
   "tables:top10suppliers:nrAwardsWon": "Number of awards won",
   "tables:top10suppliers:nrPE": "Number of PEs from which an award has been received",
-  "tables:top10suppliers:totalAwardedValue": "Total awarded value (in VND)",
+  "tables:top10suppliers:totalAwardedValue": "Total awarded value",
   "tables:top10suppliers:title": "Top 10 suppliers",
   "yearsBar:ctrlClickHint": "To select a single year, hold 'shift' while clicking, or simply double click.",
   "crd:corruptionType:FRAUD:pageTitle": "Fraud Risk",
