OCVN-398 Page #1 text

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -1,8 +1,8 @@
 {
 	"general:comparison:other": "Khác",
 	"general:amountInVND": "Số tiền (VNĐ)",
-	"general:title": "đấu thầu qua mạng",
-	"general:subtitle": "bộ công cụ",
+	"general:title": "Thống kê trong đấu thầu",
+	"general:subtitle": "",
 	"general:description:title": "Mô tả bộ công cụ",
 	"general:description:content": "Cổng thông tin Giám sát Đánh giá đấu thầu là nền tảng tương tác nhằm phân tích, giám sát và đánh giá thông tin về đấu thầu tại Việt Nam. Mọi dữ liệu trong bảng điều khiển của Cổng thông tin đều được thu thập từ hệ thống mạng đấu thầu quốc gia (eGP). Việc công khai các dữ liệu này mang tính thí điểm và không đại diện cho dữ liệu chính thức của Chính phủ.",
 	"general:login": "đăng nhập",
@@ -91,12 +91,12 @@
 	"charts:nrEBid:xAxisTitle": "Năm",
 	"charts:nrEBid:yAxisTitle": "Số lượng",
 	"charts:nrEBid:title": "Số gói thầu điện tử được trao thầu",
-	"charts:overview:traces:award": "Kết quả đấu thầu",
-	"charts:overview:traces:bidplan": "Kế hoạch gói thầu",
-	"charts:overview:traces:tender": "Đấu thầu",
+	"charts:overview:traces:award": "Theo KQLCNT",
+	"charts:overview:traces:bidplan": "Theo KHLCNT",
+	"charts:overview:traces:tender": "Theo TBMT, TB mời chào hàng",
 	"charts:overview:xAxisName": "Năm",
-	"charts:overview:yAxisName": "Số lượng",
-	"charts:overview:title": "Hoạt động mua sắm đấu thầu theo năm",
+	"charts:overview:yAxisName": "Số lượng gói thầu",
+	"charts:overview:title": "Tổng hợp hoạt động đấu thầu",
 	"charts:percentEBid:xAxisName": "Năm",
 	"charts:percentEBid:yAxisName": "Phần trăm",
 	"charts:percentEBid:title": "% đơn vị dự thầu sử dụng đấu thầu điện tử",
