OCE-398 Page #4 translations(filters)

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -49,7 +49,7 @@
 	"filters:dashboard:manageDashboards": "quản lý bảng điều khiển",
 	"filters:dashboard:manageUsers": "quản lý người sử dụng",
 	"filters:procuringEntity:title": "Bên mời thầu",
-	"filters:supplier:title": "Nhà cung cấp",
+	"filters:supplier:title": "Nhà thầu",
 	"filters:tenderPrice:title": "Giá gói thầu",
 	"filters:multipleSelect:selectAll": "Chọn tất cả",
 	"filters:multipleSelect:selectNone": "Không chọn mục nào",
@@ -103,7 +103,7 @@
 	"charts:procurementMethod:unspecified": "Không xác định",
 	"charts:procurementMethod:xAxisName": "Phương pháp",
 	"charts:procurementMethod:yAxisName": "Số tiền (VNĐ)",
-	"charts:procurementMethod:title": "hình thức đấu thầu",
+	"charts:procurementMethod:title": "Hình thức lựa chọn nhà thầu",
 	"charts:cancelledAmounts:xAxisName": "Năm",
 	"charts:cancelledAmounts:yAxisName": "Số tiền (VNĐ)",
 	"charts:cancelledPercents:title": "Tỷ lệ vốn bị hủy",
