OCVN-398 Page #7 text(location popup)

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -112,8 +112,8 @@
 	"charts:cancelledPercents:yAxisName": "Phần trăm",
 	"maps:tenderLocations:title": "Địa điểm đấu thầu",
 	"maps:tenderLocations:tabs:overview:title": "Tổng quan",
-	"maps:tenderLocations:tabs:overview:nrOfTenders": "Số nhà thầu tham dự",
-	"maps:tenderLocations:tabs:overview:totalFundingByLocation": "Tổng trị giá đấu thầu tại địa phương",
+	"maps:tenderLocations:tabs:overview:nrOfTenders": "Số lượng TBMT",
+	"maps:tenderLocations:tabs:overview:totalFundingByLocation": "Tổng giá gói thầu (VND)",
 	"tables:top10awards:number": "Số TBMT",
 	"tables:top10awards:date": "Ngày tháng",
 	"tables:top10awards:supplier": "Nhà cung cấp",
