OCVN-398 Page #9 text updates

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -80,9 +80,9 @@
   "charts:amountsByItem:xAxisTitle": "Hạng mục",
   "charts:amountsByItem:yAxisTitle": "Số tiền (VNĐ)",
 	"charts:costEffectiveness:traces:awardPrice": "Giá gói thầu",
-	"charts:costEffectiveness:traces:difference": "Chênh lệch với giá gói thầu",
+	"charts:costEffectiveness:traces:difference": "Tiết kiệm",
 	"charts:costEffectiveness:xAxisTitle": "Năm",
-	"charts:costEffectiveness:yAxisTitle": "Số tiền (VNĐ)",
+	"charts:costEffectiveness:yAxisTitle": "Triệu đồng hoặc tỷ đồng",
 	"charts:costEffectiveness:title": "Hiệu quả chi phí",
 	"charts:general:noData": "Không có dữ liệu",
 	"charts:nrCancelled:title": "số TBMT bị hủy",
