OCVN-398 Cost effectiveness/cost effectiveness changes

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -83,7 +83,7 @@
 	"charts:costEffectiveness:traces:difference": "Tiết kiệm",
 	"charts:costEffectiveness:xAxisTitle": "Năm",
 	"charts:costEffectiveness:yAxisTitle": "Triệu đồng hoặc tỷ đồng",
-	"charts:costEffectiveness:title": "Hiệu quả chi phí",
+	"charts:costEffectiveness:title": "Tiết kiệm trong đấu thầu",
 	"charts:general:noData": "Không có dữ liệu",
 	"charts:nrCancelled:title": "số TBMT bị hủy",
 	"charts:nrCancelled:xAxisTitle": "Năm",
