OCVN-398 Procurement method y-axis rename

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -102,7 +102,7 @@
 	"charts:percentEBid:title": "% đơn vị dự thầu sử dụng đấu thầu điện tử",
 	"charts:procurementMethod:unspecified": "Không xác định",
 	"charts:procurementMethod:xAxisName": "Hình thức lựa chọn nhà thầu",
-	"charts:procurementMethod:yAxisName": "Số tiền (VNĐ)",
+	"charts:procurementMethod:yAxisName": "Triệu đồng hoặc tỷ đồng",
 	"charts:procurementMethod:title": "Hình thức lựa chọn nhà thầu",
 	"charts:cancelledAmounts:xAxisName": "Năm",
 	"charts:cancelledAmounts:yAxisName": "Số tiền (VNĐ)",
