OCVN-398 Avg nr bidders changes

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -65,8 +65,8 @@
 	"tabs:overview:title": "Tổng quan",
 	"tabs:location:title": "Địa điểm (tỉnh thành)",
 	"charts:avgNrBids:xAxisTitle": "Năm",
-	"charts:avgNrBids:yAxisTitle": "Số TBMT",
-	"charts:avgNrBids:title": "Số gói thầu trung bình",
+	"charts:avgNrBids:yAxisTitle": "Số lượng nhà thầu trung bình",
+	"charts:avgNrBids:title": "Số lượng nhà thầu trung bình tham dự trên 1 gói thầu",
 	"charts:bidPeriod:traces:tender": "Đấu thầu",
 	"charts:bidPeriod:traces:award": "Kết quả đấu thầu",
 	"charts:bidPeriod:traces:total": "Tổng",
