--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -125,9 +125,9 @@
 	"tables:top10tenders:procuringEntity": "Bên mời thầu",
 	"tables:top10tenders:estimatedValue": "Trị giá ước tính",
 	"tables:top10tenders:title": "Nhóm 10 nhà thầu trúng nhiều gói thầu nhất",
-	"tables:frequentTenderers:supplier": "nhà cung cấp",
+	"tables:frequentTenderers:supplier": "Nhà thầu",
 	"tables:frequentTenderers:nrITB": "số gói thầu có nhà thầu đã từng cùng tham gia dự thầu",
-	"tables:frequentTenderers:title": "tần suất cùng tham gia dự thầu",
+	"tables:frequentTenderers:title": "Tần suất cùng tham gia dự thầu",
   "tables:frequentTenderers:supplier1wins": "Nhà cung cấp số 1 trúng thầu",
 	"tables:frequentTenderers:supplier2wins": "Nhà cung cấp số 2 trúng thầu",
 	"tables:showAll": "hiển thị tất cả",
