OCVN-398 BidsByItem text changes

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -73,9 +73,9 @@
 	"charts:bidPeriod:xAxisTitle": "Số ngày thực hiện",
 	"charts:bidPeriod:yAxisTitle": "Năm",
 	"charts:bidPeriod:title": "Thời gian trong đấu thầu",
-	"charts:bidsByItem:title": "số TBMT theo hạng mục",
-	"charts:bidsByItem:xAxisTitle": "Hạng mục",
-	"charts:bidsByItem:yAxisTitle": "Số lượng",
+	"charts:bidsByItem:title": "Số gói thầu theo lĩnh vực đấu thầu",
+	"charts:bidsByItem:xAxisTitle": "Lĩnh vực đấu thầu",
+	"charts:bidsByItem:yAxisTitle": "Số lượng gói thầu",
   "charts:amountsByItem:title": "Tổng trị giá theo lĩnh vực đấu thầu",
   "charts:amountsByItem:xAxisTitle": "Hạng mục",
   "charts:amountsByItem:yAxisTitle": "Số tiền (VNĐ)",
