OCVN-398 Cancelled amounts VN text changes

--- a/web/public/languages/vn_VN.json
+++ b/web/public/languages/vn_VN.json
@@ -105,9 +105,9 @@
 	"charts:procurementMethod:yAxisName": "Triệu đồng hoặc tỷ đồng",
 	"charts:procurementMethod:title": "Hình thức lựa chọn nhà thầu",
 	"charts:cancelledAmounts:xAxisName": "Năm",
-	"charts:cancelledAmounts:yAxisName": "Số tiền (VNĐ)",
+	"charts:cancelledAmounts:yAxisName": "Triệu đồng hoặc tỷ đồng",
 	"charts:cancelledPercents:title": "Tỷ lệ vốn bị hủy",
-	"charts:cancelledAmounts:title": "Vốn bị hủy",
+	"charts:cancelledAmounts:title": "Vốn bị hủy thầu",
 	"charts:cancelledPercents:xAxisName": "Năm",
 	"charts:cancelledPercents:yAxisName": "Phần trăm",
 	"maps:tenderLocations:title": "Địa điểm đấu thầu",
